# Gestalt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Vagrantfile  install-deps-ub21.sh
Documents/design/: charts.pptx
benchmark/: CMakeLists.txt
benchmark/distributed/: CMakeLists.txt  follower.cpp  starter.cpp
benchmark/latency/: CMakeLists.txt  main.cpp
etc/gestalt/: gestalt.conf
microbench/: CMakeLists.txt
microbench/hash-fill-factor/: CMakeLists.txt  main.cpp
microbench/rdpma-perf/: CMakeLists.txt  client.cpp  server.cpp
playground/: CMakeLists.txt
playground/include/playground/: playground.h.in
playground/librdmacm-examples/: CMakeLists.txt
playground/rdma-hello-world/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  data_mapper.cpp  dev_client.cpp  rdma_connection_pool.cpp
src/client/ops/: all.hpp  base.hpp  lock.hpp  read.hpp  write_apm.hpp
src/include/: CMakeLists.txt  client.hpp  data_mapper.hpp  defaults.hpp  headless_hashtable.hpp  optim.hpp
src/include/common/: boost_log_helper.hpp  defer.hpp  lru_cache.hpp  size_literals.hpp
src/include/internal/: data_mapper.hpp  ops_base.hpp  rdma_connection_pool.hpp
src/include/misc/: ddio.hpp  numa.hpp
src/include/spec/: bufferlist.hpp  dataslot.hpp  params.hpp
src/include/spec/ops/: base.hpp  read.hpp
src/misc/: CMakeLists.txt  ddio.cpp  numa.cpp
src/monitor/: CMakeLists.txt  main.cpp
src/rpc/: CMakeLists.txt  ClusterMap.proto  Session.proto
src/server/: CMakeLists.txt  headless_hashtable.hpp  main.cpp  server.cpp  server.hpp  session_servicer.cpp  session_servicer.hpp
unittest/: CMakeLists.txt  misc.cpp  numa.cpp
